
16 March 2004 Andreas Fabri
- Move the following to the new scheme :
  signed_distance_to_{point,line_plane}

13 Mar 2004 Sylvain Pion
- Move centroid() to the new scheme.

13 Mar 2004 Sylvain Pion
- Get rid of equal_line() and remove the file predicates_on_line_2.h.

13 Mar 2004 Sylvain Pion
- Use LineC3 instead of LineH3.
- Merge Construct_line_3 between H&C.
- Duplicate Construct_projected_point_3 between H&C.

13 Mar 2004 Sylvain Pion
- Factorize identical Coplanar_3 functors between H&C.
- Move to the new scheme :
  orientation(4 Point_3), coplanar(4 Point_3),
  are_positive_oriented(4 Point_3), are_negative_oriented(4 Point_3),
  side_of_oriented_sphere(5 Point_3)

13 Mar 2004 Sylvain Pion
- Use TetrahedronC3 instead of TetrahedronH3.
  Duplicate Compute_volume_3 and Bounded_side_3 functors instead.

13 Mar 2004 Sylvain Pion
- Use TriangleC3 instead of TriangleH3.
  Duplicated Has_on_3 instead.

13 Mar 2004 Sylvain Pion
- Move the following to the new scheme :
  area(3 Point_2), operator-(2 Point_[23]), collinear(3 Point_3),
  angle(3 Point_3), coplanar_orientation([34] Point_3),
  coplanar_side_of_bounded_circle(4 Point_3), are_ordered_along_line(3 Point_3),
  are_strictly_ordered_along_line(3 Point_3),
  collinear_are_strictly_ordered_along_line(3 Point_3)

10 Mar 2004 Sylvain Pion
- Move operator+(Point_2, Vector_2) to the new scheme.

10 Mar 2004 Andreas Fabri
- Replaced operator*(Vector, FT) with functor

 9 Mar 2004 Andreas Fabri
- Added missing typename

 8 Mar 2004 Andreas Fabri
- Added functor and function for constructing orthogilnal vector of three points

29 Feb 2004 Sylvain Pion
- Move cross_product() to the new scheme.

29 Feb 2004 Sylvain Pion
- Added ComputeScalarProduct_[23] functors.
- Added [RT|FT] multiplication from left to Vector_[23]. [bug#194]
- Moved the operator* of Vector_[23] to the new scheme.

22 Feb 2004 Sylvain Pion
- Move compare_slopes(Segment_2, Segment_2) to the new scheme.